--- a/response-decode-error-server/src/main/resources/microservice.yaml
+++ b/response-decode-error-server/src/main/resources/microservice.yaml
@@ -1,4 +1,5 @@
-API_GATEWAY: https://cse.cn-north-1.myhuaweicloud.com:443
+#API_GATEWAY: https://cse.cn-north-1.myhuaweicloud.com:443
+API_GATEWAY: http://127.0.0.1:30100
 
 APPLICATION_ID: response-decode-error
 service_description:
@@ -10,14 +11,15 @@ cse:
       address: ${API_GATEWAY}
       instance:
         watch: false
-  config:
-    client:
-      serverUri: ${API_GATEWAY}
-      refreshMode: 1
-      refresh_interval: 5000
+#  config:
+#    client:
+#      serverUri: ${API_GATEWAY}
+#      refreshMode: 1
+#      refresh_interval: 5000
   monitor:
     client:
       serverUri: ${API_GATEWAY}
+      enable: false
   rest:
     address: 0.0.0.0:18081
   credentials:
